--- a/components/footer.html
+++ b/components/footer.html
@@ -3,14 +3,14 @@
     <!-- Coluna 1: Logo -->
     <div class="footer-logo">
       <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
-      <p>Transporte Urbano Simples e Sustentável</p>
+      <p>Desde 2024</p>
     </div>
 
     <!-- Coluna 2: Informação -->
     <div class="footer-column">
       <h4>Informação</h4>
       <ul>
-        <li><a href="#">Linhas</a></li>
+        <li><a href="../pages/linhas.html">Linhas</a></li>
         <li><a href="#">Horários</a></li>
         <li><a href="#">Tarifários</a></li>
       </ul>
@@ -37,6 +37,6 @@
   </div>
 
   <div class="footer-bottom">
-    <p>&copy; 2025 TUSS - Todos os direitos reservados</p>
+    <p>&copy; 2025 TUSS &bull; Todos os direitos reservados</p>
   </div>
 </footer>
