--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a href="../pages/index.html" class="navbar-logo">
+    <a href="../pages/homepage.html" class="navbar-logo">
       <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
     </a>
 
@@ -12,7 +12,7 @@
     </div>
 
     <ul class="navbar-links" id="navbar-links">
-      <li><a href="#">Linhas</a></li>
+      <li><a href="../pages/linhas.html">Linhas</a></li>
       <li><a href="#">Horários</a></li>
       <li><a href="#">Tarifários</a></li>
       <li><a href="#">Sobre</a></li>
