--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,8 +109,8 @@ main {
   border-radius: 2px;
 }
 
-/* ===== Hero Section ===== */
-.hero-section {
+/* ===== Homepage Section ===== */
+.homepage-section {
   flex: 1; /* ocupa todo o espaço restante acima do footer */
   background-image: url('../assets/game-screenshots/bus-cimo-vila.png');
   background-size: cover;       /* cobre toda a área, sem bordas */
@@ -122,7 +122,7 @@ main {
 }
 
 /* Texto sobre a imagem */
-.hero-text {
+.homepage-text {
   text-align: center;
   z-index: 1;
   color: #ffffff;
@@ -229,7 +229,7 @@ p, li, a {
     margin: auto;
   }
 
-  .hero-section {
+  .homepage-section {
     height: auto;
     background-size: cover;
   }
