--- a/components/footer.html
+++ b/components/footer.html
@@ -10,7 +10,7 @@
     <div class="footer-column">
       <h4>Informação</h4>
       <ul>
-        <li><a href="../pages/linhas.html">Linhas</a></li>
+        <li><a href="../pages/lines.html">Linhas</a></li>
         <li><a href="#">Horários</a></li>
         <li><a href="#">Tarifários</a></li>
       </ul>
