--- a/components/navbar.html
+++ b/components/navbar.html
@@ -12,7 +12,7 @@
     </div>
 
     <ul class="navbar-links" id="navbar-links">
-      <li><a href="../pages/linhas.html">Linhas</a></li>
+      <li><a href="../pages/lines.html">Linhas</a></li>
       <li><a href="#">Horários</a></li>
       <li><a href="#">Tarifários</a></li>
       <li><a href="#">Sobre</a></li>
