modified:   pages/lines.html#	modified:   styles/styles.css

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -22,7 +22,7 @@
 ================================================ */
 html, body {
   height: 100%;
-  font-family: "Papyrus", sans-serif;
+  font-family: "Funnel Display", sans-serif;
   background: #f4f4f4;
   color: #222;
   display: flex;
