modified:   404.html 	modified:   components/footer.html 	modified:   components/navbar.html 	modified:   index.html 	renamed:    pages/homepage.html -> pages/pt/index.html 	renamed:    pages/lines.html -> pages/pt/linhas.html 	modified:   scripts/script.js 	modified:   styles/styles.css

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,10 +1,9 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a href="../pages/homepage.html" class="navbar-logo">
-      <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
+    <a href="../pages/pt/index.html" class="navbar-logo">
+      <img src="../../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
     </a>
 
-    <!-- Botão hambúrguer -->
     <div class="navbar-toggle" id="navbar-toggle">
       <span></span>
       <span></span>
@@ -12,11 +11,42 @@
     </div>
 
     <ul class="navbar-links" id="navbar-links">
-      <li><a href="../pages/lines.html">Linhas</a></li>
-      <li><a href="#">Horários</a></li>
-      <li><a href="#">Tarifários</a></li>
-      <li><a href="#">Sobre</a></li>
-      <li><a href="#">Contactos</a></li>
+      <li class="has-submenu">
+        <a href="#">Viajar</a>
+        <ul class="submenu">
+          <li><a href="#">Linhas e Horários</a></li>
+          <li><a href="#">Planear Viagem</a></li>
+          <li><a href="#">Paragens</a></li>
+          <li><a href="#">Alterações de Serviço</a></li>
+          <li><a href="#">Tarifário</a></li>
+          <li><a href="#">Acessibilidade</a></li>
+        </ul>
+      </li>
+      <li class="has-submenu">
+        <a href="#">Os TUSS</a>
+        <ul class="submenu">
+          <li><a href="#">Sobre Nós</a></li>
+          <li><a href="#">Sustentabilidade</a></li>
+          <li><a href="#">Projectos Cofinanciados</a></li>
+          <li><a href="#">Certificados e Prémios</a></li>
+        </ul>
+      </li>
+      <li class="has-submenu">
+        <a href="#">Cultura e Pessoas</a>
+        <ul class="submenu">
+          <li><a href="#">Cultura Organizacional</a></li>
+          <li><a href="#">Recrutamento</a></li>
+        </ul>
+      </li>
+      <li class="has-submenu">
+        <a href="#">Apoio e Contactos</a>
+        <ul class="submenu">
+          <li><a href="#">Fale Connosco</a></li>
+          <li><a href="#">Preguntas Frequentes</a></li>
+          <li><a href="#">Empresas</a></li>
+          <li><a href="#">Media</a></li>
+        </ul>
+      </li>
     </ul>
   </div>
 </nav>
