--- a/components/footer.html
+++ b/components/footer.html
@@ -2,7 +2,7 @@
   <div class="footer-container">
     <!-- Coluna 1: Logo -->
     <div class="footer-logo">
-      <img src="../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
+      <img src="../../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
       <p>Desde 2024</p>
     </div>
 
@@ -10,8 +10,7 @@
     <div class="footer-column">
       <h4>Informação</h4>
       <ul>
-        <li><a href="../pages/lines.html">Linhas</a></li>
-        <li><a href="#">Horários</a></li>
+        <li><a href="#">Linhas e Horários</a></li>
         <li><a href="#">Tarifários</a></li>
       </ul>
     </div>
