modified:   404.html 	modified:   components/footer.html 	modified:   components/navbar.html 	modified:   index.html 	new file:   pages/pt/acessibilidade.html 	new file:   pages/pt/alteracoes-de-servico.html 	new file:   pages/pt/paragem.html 	new file:   pages/pt/planear-viagem.html 	new file:   pages/pt/tarifario.html

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a href="../pages/pt/index.html" class="navbar-logo">
+    <a href="../../../pages/pt/index.html" class="navbar-logo">
       <img src="../../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
     </a>
 
@@ -14,12 +14,12 @@
       <li class="has-submenu">
         <a href="#">Viajar</a>
         <ul class="submenu">
-          <li><a href="#">Linhas e Horários</a></li>
-          <li><a href="#">Planear Viagem</a></li>
-          <li><a href="#">Paragens</a></li>
-          <li><a href="#">Alterações de Serviço</a></li>
-          <li><a href="#">Tarifário</a></li>
-          <li><a href="#">Acessibilidade</a></li>
+          <li><a href="../../pages/pt/linhas.html">Linhas e Horários</a></li>
+          <li><a href="../../pages/pt/planear-viagem.html">Planear Viagem</a></li>
+          <li><a href="../../pages/pt/paragem.html">Paragens</a></li>
+          <li><a href="../../pages/pt/alteracoes-de-servico.html">Alterações de Serviço</a></li>
+          <li><a href="../../pages/pt/tarifario.html">Tarifário</a></li>
+          <li><a href="../../pages/pt/acessibilidade.html">Acessibilidade</a></li>
         </ul>
       </li>
       <li class="has-submenu">
