--- a/components/footer.html
+++ b/components/footer.html
@@ -10,8 +10,8 @@
     <div class="footer-column">
       <h4>Informação</h4>
       <ul>
-        <li><a href="#">Linhas e Horários</a></li>
-        <li><a href="#">Tarifários</a></li>
+        <li><a href="../../pages/pt/linhas.html">Linhas e Horários</a></li>
+        <li><a href="../../pages/pt/tarifario.html">Tarifários</a></li>
       </ul>
     </div>
 
