modified:   components/navbar.html 	new file:   pages/en/accessibility.html 	new file:   pages/en/index.html 	new file:   pages/en/lines.html 	new file:   pages/en/plan-a-trip.html 	new file:   pages/en/service-changes.html 	new file:   pages/en/stop.html 	new file:   pages/en/tariff.html 	modified:   pages/pt/acessibilidade.html 	modified:   pages/pt/alteracoes-de-servico.html 	modified:   pages/pt/index.html 	modified:   pages/pt/linhas.html 	modified:   pages/pt/paragem.html 	modified:   pages/pt/planear-viagem.html 	modified:   pages/pt/tarifario.html 	new file:   scripts/lang-switch.js 	modified:   styles/styles.css

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -47,6 +47,10 @@
           <li><a href="#">Media</a></li>
         </ul>
       </li>
+
+      <li class="language-switch">
+        <button id="lang-toggle">EN</button>
+      </li>
     </ul>
   </div>
 </nav>
