modified:   components/footer.html 	modified:   components/navbar.html 	modified:   pages/en/accessibility.html 	modified:   pages/en/index.html 	modified:   pages/en/lines.html 	modified:   pages/en/plan-a-trip.html 	modified:   pages/en/service-changes.html 	modified:   pages/en/stop.html 	modified:   pages/en/tariff.html 	modified:   pages/pt/acessibilidade.html 	modified:   pages/pt/alteracoes-de-servico.html 	modified:   pages/pt/index.html 	modified:   pages/pt/linhas.html 	modified:   pages/pt/paragem.html 	modified:   pages/pt/planear-viagem.html 	modified:   pages/pt/tarifario.html 	modified:   scripts/lang-switch.js 	modified:   scripts/script.js

--- a/components/navbar.html
+++ b/components/navbar.html
@@ -1,25 +1,19 @@
 <nav class="navbar">
   <div class="navbar-container">
-    <a href="../../../pages/pt/index.html" class="navbar-logo">
-      <img src="../../assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
+    <a href="/pages/pt/index.html" class="navbar-logo">
+      <img src="/assets/tuss-logos/tuss-all-white.png" alt="Logo TUSS">
     </a>
-
-    <div class="navbar-toggle" id="navbar-toggle">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
 
     <ul class="navbar-links" id="navbar-links">
       <li class="has-submenu">
         <a href="#">Viajar</a>
         <ul class="submenu">
-          <li><a href="../../pages/pt/linhas.html">Linhas e Horários</a></li>
-          <li><a href="../../pages/pt/planear-viagem.html">Planear Viagem</a></li>
-          <li><a href="../../pages/pt/paragem.html">Paragens</a></li>
-          <li><a href="../../pages/pt/alteracoes-de-servico.html">Alterações de Serviço</a></li>
-          <li><a href="../../pages/pt/tarifario.html">Tarifário</a></li>
-          <li><a href="../../pages/pt/acessibilidade.html">Acessibilidade</a></li>
+          <li><a href="/pages/pt/linhas.html">Linhas e Horários</a></li>
+          <li><a href="/pages/pt/planear-viagem.html">Planear Viagem</a></li>
+          <li><a href="/pages/pt/paragem.html">Paragens</a></li>
+          <li><a href="/pages/pt/alteracoes-de-servico.html">Alterações de Serviço</a></li>
+          <li><a href="/pages/pt/tarifario.html">Tarifário</a></li>
+          <li><a href="/pages/pt/acessibilidade.html">Acessibilidade</a></li>
         </ul>
       </li>
       <li class="has-submenu">
@@ -48,9 +42,11 @@
         </ul>
       </li>
 
+      <!-- Botão de idioma -->
       <li class="language-switch">
-        <button id="lang-toggle">EN</button>
+        <button id="lang-btn">EN</button>
       </li>
     </ul>
   </div>
+  <script src="/scripts/lang-switch.js" defer></script>
 </nav>
