new file:   components/footer-en.html 	renamed:    components/footer.html -> components/footer-pt.html 	new file:   components/navbar-en.html 	renamed:    components/navbar.html -> components/navbar-pt.html 	modified:   scripts/script.js

--- a/components/navbar-pt.html
+++ b/components/navbar-pt.html
@@ -42,9 +42,8 @@
         </ul>
       </li>
 
-      <!-- Botão de idioma -->
       <li class="language-switch">
-        <button id="lang-btn">EN</button>
+        <button id="lang-btn">PT</button>
       </li>
     </ul>
   </div>
