--- a/components/footer-pt.html
+++ b/components/footer-pt.html
@@ -36,6 +36,6 @@
   </div>
 
   <div class="footer-bottom">
-    <p>&copy; 2025 TUSS &bull; Todos os direitos reservados</p>
+    <p>&copy; 2025 TUSS &bull; Todos os direitos reservados.</p>
   </div>
 </footer>
