--- a/styles/styles.css
+++ b/styles/styles.css
@@ -229,7 +229,7 @@ main {
 .homepage-section {
   width: 100%;
   height: 100vh;
-  background-image: url('../assets/game-screenshots/depot-img-1.png');
+  background-image: url('/assets/game-screenshots/bus-4k.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
