--- a/components/navbar-pt.html
+++ b/components/navbar-pt.html
@@ -42,6 +42,10 @@
         </ul>
       </li>
 
+      <li>
+        <button id="navLoginBtn" class="btn-client-area">Área Cliente</button>
+      </li>
+
       <li class="language-switch">
         <button id="lang-btn">PT</button>
       </li>
